# halo2wrong

./: Cargo.toml
ecc/circuit/: Cargo.toml
ecc/secp256k1/: Cargo.toml
ecc/src/: base_field_ecc.rs  general_ecc.rs  lib.rs
ecdsa/: Cargo.toml
ecdsa/src/: ecdsa.rs
halo2wrong/: Cargo.toml
halo2wrong/src/: utils.rs
integer/: Cargo.toml
integer/src/: chip.rs  lib.rs  rns.rs
maingate/: Cargo.toml
maingate/src/: instructions.rs
transcript/: Cargo.toml
transcript/src/: hasher.rs  transcript.rs
